Mostly implemented file read and write + file management

--- a/Frontend/HTML/main-page.html
+++ b/Frontend/HTML/main-page.html
@@ -10,19 +10,12 @@
 
     <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
 
-    <title>My Website [Name of the website]</title>
+    <title>Meal Planning Site</title>
 
   </head>
 
   <body>
-
-    <main>
-
-        <h1>Welcome to My Website [Name of the website]</h1>  
-
-        <p>This is my new website hosted on GitHub Pages!</p>
-
-    </main>
+    
 
   </body>
 
