Removed AI-Default

--- a/IA/Frontend/HTML/main-page.html
+++ b/IA/Frontend/HTML/main-page.html
@@ -3,20 +3,17 @@
 <html lang=”en”>
 
   <head>
-
+    <link rel="stylesheet" href="../CSS/index.css">
     <meta charset=”UTF-8″>
-
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
-
     <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
-
     <title>Meal Planning Site</title>
 
   </head>
 
   <body>
-    
-
+  <!--centered calendar, side bar with icons that link to different pages, right side icon with icon for user that links to user info-->
+   <!--user stuff should come after, not nessisarily a multi-user service--> 
   </body>
 
 </html>
