--- a/IA/Frontend/HTML/login-page.html
+++ b/IA/Frontend/HTML/login-page.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="card">
             <h2>Login</h2>
-            <form action="login.php" method="POST">
+            <form>
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
 
