Made main page heading reactive to date and time

--- a/IA/Frontend/HTML/main-page.html
+++ b/IA/Frontend/HTML/main-page.html
@@ -1,19 +1,108 @@
 <!DOCTYPE HTML>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="../CSS/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Meal Planning Site</title>
+</head>
 
-<html lang=”en”>
+<body>
+    <div class="container">
+      <div class="sidebar">
+        <!--Sidebar Icons go here-->
+      </div>
+    </div>
 
-  <head>
-    <link rel="stylesheet" href="../CSS/index.css">
-    <meta charset=”UTF-8″>
-    <meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
-    <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
-    <title>Meal Planning Site</title>
+  <div class="calendar">
+      <table>
+          <thead>
+              <tr>
+                  <th>Sun</th>
+                  <th>Mon</th>
+                  <th>Tue</th>
+                  <th>Wed</th>
+                  <th>Thu</th>
+                  <th>Fri</th>
+                  <th>Sat</th>
+              </tr>
+          </thead>
+          <tbody>
+            <tr>
+                <td>
+                    <div class="day-card">
+                        
+                        <div class="sub-card hidden">
+                            <h3>Breakfast</h3>
+                            <p>Eggs and Toast</p>
+                        </div>
+                        <div class="sub-card hidden">
+                            <h3>Lunch</h3>
+                            <p>Chicken Salad</p>
+                        </div>
+                        <div class="sub-card hidden">
+                            <h3>Dinner</h3>
+                            <p>Spaghetti Bolognese</p>
+                        </div>
+                    </div>
+                </td>
 
-  </head>
+                <td>
+                    <div class="day-card">
+                        <div class="sub-card hidden">
+                            <h3>Breakfast</h3>
+                            <p>Eggs and Toast</p>
+                        </div>
+                        <div class="sub-card hidden">
+                            <h3>Lunch</h3>
+                            <p>Chicken Salad</p>
+                        </div>
+                        <div class="sub-card hidden">
+                            <h3>Dinner</h3>
+                            <p>Spaghetti Bolognese</p>
+                        </div>
+                    </div>
+                </td>
 
-  <body>
-  <!--centered calendar, side bar with icons that link to different pages, right side icon with icon for user that links to user info-->
-   <!--user stuff should come after, not nessisarily a multi-user service--> 
-  </body>
+                <td>
+                    <div class="day-card">
+                        <div class="sub-card hidden">
+                            <h3>Breakfast</h3>
+                            <p>Eggs and Toast</p>
+                        </div>
+                        <div class="sub-card hidden">
+                            <h3>Lunch</h3>
+                            <p>Chicken Salad</p>
+                        </div>
+                        <div class="sub-card hidden">
+                            <h3>Dinner</h3>
+                            <p>Spaghetti Bolognese</p>
+                        </div>
+                    </div>
+                </td>
 
+                <td>
+                    <div class="day-card">
+                        <div class="sub-card hidden">
+                            <h3>Breakfast</h3>
+                            <p>Eggs and Toast</p>
+                        </div>
+                        <div class="sub-card hidden">
+                            <h3>Lunch</h3>
+                            <p>Chicken Salad</p>
+                        </div>
+                        <div class="sub-card hidden">
+                            <h3>Dinner</h3>
+                            <p>Spaghetti Bolognese</p>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+  </div>
+
+  <script src="../Scripts/index.js"></script>
+
+<!-- </body> -->
 </html>
