made calendar. yippeee!!!11!!

--- a/IA/Frontend/HTML/test.html
+++ b/IA/Frontend/HTML/test.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="../CSS/test.css">
+  <style>
+    .current-day {
+      background-color: lightgreen; /* Add your desired styling for the current day */
+    }
+  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -28,23 +33,9 @@
   <li>Su</li>
 </ul>
 
-<ul class="days">
-  <li>1</li>
-  <li>2</li>
-  <li>3</li>
-  <li>4</li>
-  <li>5</li>
-  <li>6</li>
-  <li>7</li>
-  <li>8</li>
-  <li>9</li>
-  <li><span class="active">10</span></li>
-  <li>11</li>
-  ...etc
+<ul class="days" id="days-list">
+  <!-- Days will be generated dynamically by JavaScript -->
 </ul>
-</html>
-<!-- gotta make it so the current day is highlighted, not always the same one-->
-<script src="../Scripts/datetime.js"></script>
 
 </body>
 </html>
