Added modal that the user can click on and enter a recipe. Cleaned up files as well.

--- a/IA/Frontend/HTML/main-page.html
+++ b/IA/Frontend/HTML/main-page.html
@@ -26,12 +26,16 @@
   </ul>
 
   <ul class="days" id="days-list">
-    <script src="../Scripts/datetime.js"></script>
   </ul>
+
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close"></span>
+      <p>Insert Recipe: </p>
+      <textarea id="noteText"></textarea>
+    </div>
+  </div>
+
+  <script src="../Scripts/calendarFunctionality.js"></script>
 </body>
 </html>
-
-<!-- todo
-  - highlight the card that is the current day
-  - add a button on each card that allows the user to add a meal/recipe-->
-
