--- a/IA/Frontend/HTML/login-page.html
+++ b/IA/Frontend/HTML/login-page.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
         <div class="card">
-            <h2>Login</h2>
+            <h2>Login / Signup</h2>
+            <p>If you have no account, one will be created automatically!</p>
             <form>
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required>
